--- a/Images/Images/Storyboards/FavoriteImages.storyboard
+++ b/Images/Images/Storyboards/FavoriteImages.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Z7f-bM-ARg">
-    <device id="retina4_7" orientation="portrait">
+    <device id="retina4_0" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -15,42 +15,43 @@
             <objects>
                 <viewController storyboardIdentifier="FavoriteImagesViewController" id="Z7f-bM-ARg" customClass="FavoriteImagesViewController" customModule="Images___iOS_Application" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Tbq-Vz-6iA">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" separatorInsetReference="fromAutomaticInsets" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="tEO-kM-Pw9">
-                                <rect key="frame" x="0.0" y="20" width="375" height="598"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="272" estimatedRowHeight="-1" sectionHeaderHeight="-1" sectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="tEO-kM-Pw9">
+                                <rect key="frame" x="0.0" y="20" width="320" height="499"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                <inset key="separatorInset" minX="15" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="favoriteImageCelIdentifier" rowHeight="273" id="Tcq-1h-gCs" customClass="FavoriteImageTableViewCell" customModule="Images___iOS_Application" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="375" height="273"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="favoriteImageCelIdentifier" id="Tcq-1h-gCs" customClass="FavoriteImageTableViewCell" customModule="Images___iOS_Application" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="320" height="272"/>
                                         <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Tcq-1h-gCs" id="atc-k9-8hM">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="272.5"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Tcq-1h-gCs" id="atc-k9-8hM">
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="271.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="252" verticalCompressionResistancePriority="751" translatesAutoresizingMaskIntoConstraints="NO" id="nbO-jW-mrB">
-                                                    <rect key="frame" x="16" y="16" width="343" height="240"/>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="252" verticalCompressionResistancePriority="751" placeholderIntrinsicWidth="288" placeholderIntrinsicHeight="240" translatesAutoresizingMaskIntoConstraints="NO" id="nbO-jW-mrB">
+                                                    <rect key="frame" x="16" y="16" width="288" height="240"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="height" constant="240" id="6Tt-zX-Aoq"/>
+                                                        <constraint firstAttribute="height" constant="240" id="poS-KY-KPm"/>
                                                     </constraints>
                                                 </imageView>
                                                 <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="0Nr-lf-ZeG">
-                                                    <rect key="frame" x="169" y="117.5" width="37" height="37"/>
+                                                    <rect key="frame" x="141.5" y="117.5" width="37" height="37"/>
                                                     <color key="color" name="selectedKnobColor" catalog="System" colorSpace="catalog"/>
                                                 </activityIndicatorView>
                                             </subviews>
-                                            <color key="backgroundColor" name="knobColor" catalog="System" colorSpace="catalog"/>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <constraints>
-                                                <constraint firstItem="0Nr-lf-ZeG" firstAttribute="centerY" secondItem="nbO-jW-mrB" secondAttribute="centerY" id="9LO-UV-2e6"/>
-                                                <constraint firstAttribute="trailing" secondItem="nbO-jW-mrB" secondAttribute="trailing" constant="16" id="H35-Tg-Q7i"/>
-                                                <constraint firstItem="nbO-jW-mrB" firstAttribute="top" secondItem="atc-k9-8hM" secondAttribute="top" constant="16" id="RfU-Ap-DXc"/>
-                                                <constraint firstItem="0Nr-lf-ZeG" firstAttribute="centerX" secondItem="nbO-jW-mrB" secondAttribute="centerX" id="Wf6-J5-qFU"/>
-                                                <constraint firstItem="nbO-jW-mrB" firstAttribute="leading" secondItem="atc-k9-8hM" secondAttribute="leading" constant="16" id="jcL-Nc-KbX"/>
-                                                <constraint firstItem="nbO-jW-mrB" firstAttribute="centerY" secondItem="atc-k9-8hM" secondAttribute="centerY" id="pet-ts-Kir"/>
+                                                <constraint firstItem="nbO-jW-mrB" firstAttribute="top" secondItem="atc-k9-8hM" secondAttribute="top" constant="16" id="JqT-le-9w1"/>
+                                                <constraint firstItem="0Nr-lf-ZeG" firstAttribute="centerX" secondItem="nbO-jW-mrB" secondAttribute="centerX" id="bAO-uV-l3Q"/>
+                                                <constraint firstItem="0Nr-lf-ZeG" firstAttribute="centerY" secondItem="nbO-jW-mrB" secondAttribute="centerY" id="bcA-uP-uyD"/>
+                                                <constraint firstAttribute="trailing" secondItem="nbO-jW-mrB" secondAttribute="trailing" constant="16" id="pZy-4r-RDo"/>
+                                                <constraint firstItem="nbO-jW-mrB" firstAttribute="leading" secondItem="atc-k9-8hM" secondAttribute="leading" constant="16" id="sOV-Jc-SCR"/>
                                             </constraints>
                                         </tableViewCellContentView>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <inset key="separatorInset" minX="400" minY="0.0" maxX="0.0" maxY="0.0"/>
                                         <connections>
                                             <outlet property="favoriteImageView" destination="nbO-jW-mrB" id="Idf-4S-9dO"/>
                                             <outlet property="spinner" destination="0Nr-lf-ZeG" id="1Lz-Gz-it0"/>
@@ -64,7 +65,7 @@
                                 </connections>
                             </tableView>
                         </subviews>
-                        <color key="backgroundColor" name="selectedKnobColor" catalog="System" colorSpace="catalog"/>
+                        <color key="backgroundColor" name="knobColor" catalog="System" colorSpace="catalog"/>
                         <constraints>
                             <constraint firstItem="tEO-kM-Pw9" firstAttribute="leading" secondItem="bGP-uN-xVs" secondAttribute="leading" id="MZw-a4-TNW"/>
                             <constraint firstItem="tEO-kM-Pw9" firstAttribute="top" secondItem="bGP-uN-xVs" secondAttribute="top" id="SmC-vg-i3S"/>
