feat: add presentation of photo geo location.

--- a/Images/Images/Storyboards/DetailImage.storyboard
+++ b/Images/Images/Storyboards/DetailImage.storyboard
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="qYG-6m-VhN">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="qYG-6m-VhN">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -11,11 +15,11 @@
             <objects>
                 <viewController storyboardIdentifier="ImageDetailViewController" automaticallyAdjustsScrollViewInsets="NO" id="qYG-6m-VhN" customClass="ImageDetailViewController" customModule="Images___iOS_Application" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="uoc-9l-vqh">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" minimumZoomScale="0.0" maximumZoomScale="2" translatesAutoresizingMaskIntoConstraints="NO" id="Rcy-BJ-E0f">
-                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <subviews>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" placeholderIntrinsicWidth="414" placeholderIntrinsicHeight="736" insetsLayoutMarginsFromSafeArea="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3jd-eq-ORT">
                                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
@@ -32,6 +36,15 @@
                                     <outlet property="delegate" destination="qYG-6m-VhN" id="PsG-IO-Uz6"/>
                                 </connections>
                             </scrollView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fOP-qM-3hf">
+                                <rect key="frame" x="259" y="36" width="100" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                <color key="tintColor" red="0.45138680930000002" green="0.99309605359999997" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <state key="normal" title="GEO"/>
+                                <connections>
+                                    <action selector="geoButtinTapped:" destination="qYG-6m-VhN" eventType="touchUpInside" id="dPE-eb-LLT"/>
+                                </connections>
+                            </button>
                             <button contentMode="scaleToFill" verticalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="u38-O6-q7G">
                                 <rect key="frame" x="16" y="36" width="100" height="34"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -39,22 +52,24 @@
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="100" id="ZJF-nz-c3j"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="18"/>
-                                <color key="tintColor" name="selectedKnobColor" catalog="System" colorSpace="catalog"/>
-                                <state key="normal" title="Done"/>
+                                <color key="tintColor" red="0.45138680930000002" green="0.99309605359999997" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <state key="normal" title="DONE"/>
                                 <connections>
                                     <action selector="doneButtonTouched:" destination="qYG-6m-VhN" eventType="touchUpInside" id="WZ3-JS-sm9"/>
                                 </connections>
                             </button>
                             <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="ETv-gh-k2k">
-                                <rect key="frame" x="281.5" y="281.5" width="37" height="37"/>
+                                <rect key="frame" x="169" y="315" width="37" height="37"/>
                                 <color key="color" name="selectedKnobColor" catalog="System" colorSpace="catalog"/>
                             </activityIndicatorView>
                         </subviews>
                         <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
                         <constraints>
+                            <constraint firstItem="fOP-qM-3hf" firstAttribute="width" secondItem="u38-O6-q7G" secondAttribute="width" id="F5h-Hv-eet"/>
+                            <constraint firstItem="fOP-qM-3hf" firstAttribute="top" secondItem="u38-O6-q7G" secondAttribute="top" id="FpH-Xe-Tjm"/>
                             <constraint firstItem="Rcy-BJ-E0f" firstAttribute="trailing" secondItem="uoc-9l-vqh" secondAttribute="trailing" id="IjM-3P-vvn"/>
-                            <constraint firstItem="MTn-No-ISH" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="u38-O6-q7G" secondAttribute="trailing" constant="16" id="Mn3-0x-KiO"/>
                             <constraint firstItem="Rcy-BJ-E0f" firstAttribute="leading" secondItem="uoc-9l-vqh" secondAttribute="leading" id="Pmd-g8-jee"/>
+                            <constraint firstItem="MTn-No-ISH" firstAttribute="trailing" secondItem="fOP-qM-3hf" secondAttribute="trailing" constant="16" id="Rpv-j9-cxJ"/>
                             <constraint firstItem="ETv-gh-k2k" firstAttribute="centerX" secondItem="uoc-9l-vqh" secondAttribute="centerX" id="bWZ-6Y-p8u"/>
                             <constraint firstItem="u38-O6-q7G" firstAttribute="top" secondItem="MTn-No-ISH" secondAttribute="top" constant="16" id="cII-Xu-8eB"/>
                             <constraint firstItem="ETv-gh-k2k" firstAttribute="centerY" secondItem="uoc-9l-vqh" secondAttribute="centerY" id="gyv-Vw-Mf5"/>
