feat: add files for image search functionality.

--- a/Images/Images/Storyboards/Base.lproj/Main.storyboard
+++ b/Images/Images/Storyboards/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="VsQ-xI-R4a">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="VsQ-xI-R4a">
     <device id="retina4_0" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -23,21 +23,32 @@
                     <connections>
                         <segue destination="m79-je-d0L" kind="relationship" relationship="viewControllers" id="Pyz-vx-rAG"/>
                         <segue destination="5Po-VC-SiL" kind="relationship" relationship="viewControllers" id="17V-lK-nn8"/>
+                        <segue destination="E1c-Zq-rBa" kind="relationship" relationship="viewControllers" id="GhJ-uF-zVD"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ugx-gC-RXi" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1956" y="449.32533733133437"/>
         </scene>
-        <!--ImageViewController-->
+        <!--Images-->
         <scene sceneID="6BP-rg-ucO">
             <objects>
-                <viewControllerPlaceholder storyboardName="ImageViewController" id="m79-je-d0L" sceneMemberID="viewController">
+                <viewControllerPlaceholder storyboardName="Images" id="m79-je-d0L" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Item" id="3iN-KG-0T3"/>
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="uex-Dd-Uw9" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1805" y="937"/>
+            <point key="canvasLocation" x="1653" y="937"/>
+        </scene>
+        <!--SearchImage-->
+        <scene sceneID="QMj-Ki-jhM">
+            <objects>
+                <viewControllerPlaceholder storyboardName="SearchImage" id="E1c-Zq-rBa" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="afl-3L-88l"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="VS2-su-Oo7" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2252" y="937"/>
         </scene>
         <!--FavoriteImages-->
         <scene sceneID="mh9-Xi-pfB">
@@ -47,7 +58,7 @@
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="XNd-8K-sXa" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2176" y="936"/>
+            <point key="canvasLocation" x="1957" y="937"/>
         </scene>
     </scenes>
 </document>
